...

            <EditText
                android:id="@+id/edit_profile_first_name"
                android:layout_width="210dp"
                android:layout_height="40dp"
...

            <EditText
                android:id="@+id/edit_profile_last_name"
                android:layout_width="210dp"
                android:layout_height="40dp"
...

            <EditText
                android:id="@+id/edit_profile_date"
                android:layout_width="150dp"
                android:layout_height="40dp"
...

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/edit_profile_cancel"
                android:layout_width="120dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/edit_profile_save"
                android:layout_width="120dp"
                android:layout_height="60dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toEndOf="@+id/edit_profile_date_picker"
                app:layout_constraintTop_toBottomOf="@+id/textView25"
                app:layout_constraintVertical_bias="0.0" />
...

            <EditText
                android:id="@+id/edit_profile_weight1"
                android:layout_width="50dp"
                android:layout_height="43dp"
...

            <EditText
                android:id="@+id/edit_profile_weight2"
                android:layout_width="50dp"
                android:layout_height="43dp"
...

            <EditText
                android:id="@+id/edit_profile_weight3"
                android:layout_width="50dp"
                android:layout_height="43dp"
...

            <EditText
                android:id="@+id/edit_profile_weight4"
                android:layout_width="50dp"
                android:layout_height="43dp"
...

            <EditText
                android:id="@+id/edit_profile_weight5"
                android:layout_width="50dp"
                android:layout_height="43dp"
...
