...
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="75dp"
        android:background="@color/red"
        android:text="No"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_match_percent_text" />

    <Button
...
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@color/green"
        android:text="Yes"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_match_percent_text" />

    <TextView
...
